🎲 Emoji ran out